--- a/c_src/notes/20240226.md
+++ b/c_src/notes/20240226.md
@@ -1,4 +1,4 @@
-# Function of void
+# Functions of void
 
 1. void function()
 2. function(void)
@@ -10,7 +10,8 @@ Character type is int in C
 # Operater
 
 ## Arithmetic
-+, -, *, /, %(remainder)
++, -, *, /, 
+%(remainder) - for integer
 
 1 + 2 = 3;
 int + int = int
@@ -69,10 +70,10 @@ int a = 1;
 a++; // a : 2
 
 int a = 1;
-int b = ++a;
+int b = ++a; // `++a` return value : 2
 
 int a = 1;
-int b = a++;
+int b = a++; // `a++` return value : 1
 ```
 
 식(expression)은, 실행시간(runtime)에 평가(evaluate)되면, 하나의 결과값(return value)을 가진다
@@ -157,13 +158,13 @@ double celsius = (double)5 / 9.0 * (double)(fahr - 32);
 ```
 
 ## Bit operation
-### &(AND)
+### &(AND) - 0, F
 Mask 연산 - subnet mask
 
 ### |(OR)
 치환(replace) - replace a specific bit into 1
 
-### ~(NOT) - make 1 bosu
+### ~(NOT) - make 1 complement
 
 ### ^(XOR)
 서로 다를때 1 (베타적), 비교
@@ -172,6 +173,6 @@ Mask 연산 - subnet mask
 int a = 0x12345678;
 int b = 0x0000FF18;
 
-// 비트연산의 피연산자는, 정수형 변수나 정수형 값이여야만 한다
+// 비트연산의 피연산자는, is not a bit, 정수형 변수나 정수형 값이여야만 한다
 int c = a & b;
 ```
