--- a/c_src/notes/20240225_types.md
+++ b/c_src/notes/20240225_types.md
@@ -1,4 +1,4 @@
-* Integers
+# Integers
 - (signed) char (1) : -128 ~ 127
   character - 1 byte integer (This is used to store ASCII generally in C language)
 
@@ -12,37 +12,37 @@ unsigned : no sign
 - unsigned short (2) : 0 ~ 65535
 ...
 
-* Floating Points
+# Floating Points
 - float (4)
 - double (8)
 
-* Void
+# Void
 - if there is no input, write inside of parenthesis
 - if there is no output, write in front of functions
-- if it's void pointer(*), comprehensive pointer, generic pointer
+- if it's void pointer(#), comprehensive pointer, generic pointer
 
-* Literal (Constant)
+# Literal (Constant)
 
-** Integers
+## Integers
 100 0144 0x64 int
 (not standard - b00110000)
 
-** Floating Points
+## Floating Points
 3.14F float
 3.14 double
 both are evaluated as same speed
 
-** Long
+## Long
 retirement
 1year => 100,000,000 LL (long long)
 0xFUL => 15 unsigned long
 
 
-** Character is refer to Integer
+## Character is refer to Integer
 'A' == 65 => X char X => O int O
 
 char c = 65;
 char c = 'A';
 both are the same
 
-"ABCD" => X string X => const char*
+"ABCD" => X string X => const char#
