Link readme files

--- a/c_src/notes/20240226.md
+++ b/c_src/notes/20240226.md
@@ -2,15 +2,17 @@
 
 1. void function()
 2. function(void)
-3. void*
+3. void\*
 
 # Character
+
 Character type is int in C
 
 # Operater
 
 ## Arithmetic
-+, -, *, /, 
+
++, -, \*, /,
 %(remainder) - for integer
 
 1 + 2 = 3;
@@ -22,30 +24,32 @@ double + double = double
 1 + 2.0 = 3.0;
 int + double => int 1 -> double 1.0 => double
 
-
 ### When should we use remainder?
+
 int num = ?;
 int result = num % 6 + 1;
 
 range of result : 1 ~ 6 => dice
 
 1. a array of number repeating
-1234123412341234...
+   1234123412341234...
 
 2. -1
-0123012301230123...
+   0123012301230123...
 
 3. n -> 1, infinite
-0123456789...
+   0123456789...
 
 num % 4 + 1;
 
 ## Incrementor
+
 ++, --
 
 This is only applied on a `integer variable`
 
 ### 이항연산자
+
 피연산자가 2(이)개
 
 ```c
@@ -53,6 +57,7 @@ a + b; // asm : add
 ```
 
 ### 단항연산자
+
 피연산자가 1(단)개
 
 #### Examples
@@ -94,6 +99,7 @@ b = a++; // `a++` return value : 1
 ```
 
 ## Assignment
+
 ```c
 // variable = expression;
 fahr = 100;
@@ -108,7 +114,8 @@ printf("abcd"); // printf return value : length of string in arguments : 4
 ```
 
 ## Compare (Relational)
->, <, >=, <=, ==, !=
+
+> , <, >=, <=, ==, !=
 
 ```c
 4 > 3 // `4 > 3` return value : 1 (int)
@@ -116,6 +123,7 @@ printf("abcd"); // printf return value : length of string in arguments : 4
 ```
 
 Python, C++
+
 ```python
 4 > 3 # `4 > 3` return value : True (bool)
 4 < 3 # `4 < 3` return value : False (bool)
@@ -131,9 +139,11 @@ MacOS => UNIX
 ## Logical (논리)
 
 ### 이항연산자
+
 &&(AND), ||(OR)
 
 ### 단항연산자
+
 !(NOT)
 
 ```c
@@ -148,9 +158,11 @@ MacOS => UNIX
 ```
 
 ## Type casting (형변환)
+
 형식을 바꾼다
 
 명시적(explicit)으로 작성이 가능하나, 보통 암시적(implicit)으로 사용한다
+
 ```c
 // (type)expression
 int a = (int)0.99999; // a = 0
@@ -158,15 +170,19 @@ double celsius = (double)5 / 9.0 * (double)(fahr - 32);
 ```
 
 ## Bit operation
+
 ### &(AND) - 0, F
+
 Mask 연산 - subnet mask
 
 ### |(OR)
+
 치환(replace) - replace a specific bit into 1
 
 ### ~(NOT) - make 1 complement
 
 ### ^(XOR)
+
 서로 다를때 1 (베타적), 비교
 
 ```c
