--- a/c_src/notes/20240227.md
+++ b/c_src/notes/20240227.md
@@ -1,8 +1,11 @@
 # C언어 중급
-quick sorting -> clib -> void*
+
+quick sorting -> clib -> void\*
+
 - 이해하고, 만들수 있으면
 
 # The C programming language
+
 200p
 
 훑고 -> 디테일
@@ -16,11 +19,13 @@ C 언어 산업표준 문서
 C++ (complex syntax -> why?) -> 기준
 
 # Standard
+
 ISO/IEC
 IEC = International Electrotechnical Commission
 ISO = International Organization for Standardization
 
 ## C Standard
+
 ISO/IEC 9899:2018
 Information technology - Programming languages (C)
 
@@ -29,9 +34,11 @@ Information technology - Programming languages (C)
 [Open Standard](https://www.open-std.org/JTC1/SC22/WG14/www/projects#9899)
 
 ## Glossary
+
 [NIST](https://www.nist.gov/)
 
 # Shift operater
+
 `>>, <<` (multiply, divide)
 
 ```c
@@ -53,7 +60,7 @@ int b = a >> 2;
 printf("0x%02x"); // 0x0F
 
 unsigned int a = 0x33;
-unsigned int b = a >> 2; // 
+unsigned int b = a >> 2; //
 ```
 
 ```java
@@ -72,6 +79,7 @@ int b = a >>> 3;
 컴파일러 최적화, 최적화 도구, 소스코드 문제점 감지 프로그램
 
 # Anoter Operaters
+
 ```c
 .-> // struct
 []
@@ -89,7 +97,6 @@ int b = a >>> 3;
 
 조건, JUMP => 참 거짓(2가지) 선택지, 분기점를 만들 수 있다
 
-
 ### 선택지 만들기
 
 1. 조건
@@ -99,11 +106,11 @@ int b = a >>> 3;
 2-2. 참일때 => 실행 => 거짓부분 스킵 => JUMP
 
 #### Selection
+
 - if
 - if-else (x == 2)
 - else-if (x > 2)
 - switch-case
-
 
 ### 반복 하기
 
@@ -114,13 +121,14 @@ int b = a >>> 3;
 2-2. 참일때 => 실행 => 다시 조건으로 => JUMP
 
 #### Loop
+
 - while
 - for
-
 
 # 자격증
 
 ## 국가공인 자격증
+
 정보처리기능사
 정보처리산업기사
 정보처리기사 (+경력3년)
