--- a/c_src/notes/20240304.md
+++ b/c_src/notes/20240304.md
@@ -27,7 +27,7 @@ nums[4] = 5;
 
 # Library
 
-The most usaged code that is already built
+The most used code that is already built
 
 ```c
 #include <stdio.h>
