Struct & Array & Pointer

--- a/c_src/notes/20240306.md
+++ b/c_src/notes/20240306.md
@@ -6,11 +6,14 @@
 2. 배열을 인자로 전달할 때  
 **첫번째 인자의 시작주소**와, **사이즈**를 전달한다
 
-3. 
+3. 구조체를 인자로 전달할때  
+overhead를 줄일 수 있다
 
-4. 
+4. 사용자 정의 연산을 인자로 전달할때 함수포인터를 사용한다
 
-5. 
+5. 임의의 인자를 전달할때, void *를 사용한다
+
+(qsort function library)
 
 ## 함수에서 여러개의 결과값 받기 
 주소값을 **인자로** 전달하고, 호출당하는 쪽에서 해당 주소의 값을 변경한다
