mysql header included on mac

--- a/mysql/notes/20240308.md
+++ b/mysql/notes/20240308.md
@@ -5,13 +5,14 @@
 1. Add mark on source code in VSCode
 2. Create CMakeLists.txt, and write it.
 3. Configure CMake Project directory on VSCode
-    - Install CMake Plugins
-    - Specify the project directory
+   - Install CMake Plugins
+   - Specify the project directory
 4. Run Debug in CMake Plugins
 
 # MySQL in Web by Python
 
 ## Flask
+
 Middleware, Web Framework in Python
 
 - Define information about our database
@@ -22,11 +23,15 @@ Middleware, Web Framework in Python
 - Use data!
 
 # Web Frameworks
+
 ## DJango in Python
+
 ## Spring in Java
+
 ## wt, poco in C/C++
 
 # ERD
+
 Entity Relation Diagram
 
 Entity = Logical Table
@@ -39,13 +44,16 @@ You can create Database from ERD! (This is called Fowarding)
 You may encount anomalies when you create and operate database.
 
 ## Deletion Anomaly
+
 - trigger deletion unexpectly
 
 ## Insertion Anomaly
+
 - insert NULL unexpectly
 
 ## Update Anomaly
-- inconsistency 
+
+- inconsistency
 
 # Dependency and Nomalization
 
@@ -55,33 +63,102 @@ A relationship between two or more data
 
 데이터베이스(강좌명) -> 503호(강의실)
 
-강좌명을 통해, 강의실을 알 수 있음 (There is a relationship!)
+### Functional Dependency
 
-1. 강의실은 강좌명에 종속(dependant) 한다(do)
-2. 강좌명은 강의실을 결정(determine) 한다(do)
-3. 강좌명 -> 강의실
-4. 강좌명은 강의실의 결정자(determinant) 이다(is) 
+```c
+강의실 main(강좌명)
+```
 
+강좌명을 통해, 강의실을 알 수 있음 (There is a 1:1 relationship!)
+강좌명 -> 강의실 (1:1)
 
-김진호(수강생) -> 데이터베이스(강좌명)
+강의실을 통해, 강좌명을 알 수 없음 (1:N)
+강의실 -/> 강좌명
 
-수강생을 통해, 강좌명을 알 수 없음 (관계 없음)
+1. 강좌명(1 in)은 강의실(1 out)의 결정자(determinant) 이다(is)
+2. 강좌명(1 in)은 강의실(1 out)을 결정(determine) 한다(do)
+3. 강의실(1 in)은 강좌명(N out)에 종속(dependant) 한다(do)
+
+김진호(수강생) -> 데이터베이스(강좌명) (1:1)
+데이터베이스(강좌명) -/> 김진호(수강생) (1:N)
 
 ## What is Nomalization?
 
-Reducing anomalies by update relation
+Reducing anomalies by update relation by separate attribute into new table
+
+To reduce anomalies, attributes that are not related should be separated.
 
 ### 1 Normal Format
-Attributes are must be atomic.
 
-진호 취미 코딩 유튜브 => 진호, 취미들 => (진호, 코딩), (진호, 유튜브)
+Attributes are must be atomic. (You can't store multiple values in one attribute)
+
+진호의 취미는, 코딩과 유튜브 시청, 영상편집이다 => hobby(`진호, (코딩, 유튜브 시청, 영상편집)`)
+=> 1NF : hobby(`(진호, 코딩), (진호, 유튜브), (진호, 영상편집)`)
+
+#### Pros
+
+```sql
+-- there is no normal format (computer needs more time to process)
+SELECT * FROM hobby WHERE "취미" LIKE "%코딩%";
+
+-- there is normal format
+SELECT * FROM hobby WHERE "취미" = "코딩";
+```
 
 ### 2 Normal Format
 
+#### Conditions
+
+1. Relation must be in 1NF
+2. Every non-primary key attribute is fully functionally dependent
+   (no partial dependency)
+
+- Full Functional Dependency
+  A condition in which an attribute (or set of attributes) in a relation (table) uniquely determines another attribute within that relation, and no subset of the determining attribute(s) has the same property.
+
+- Partial Dependency  
+  A condition in which an attribute (or set of attributes) in a relation (table) is functionally dependent on only a part of a candidate key, rather than the entire key.
+
+1NF : order(`(손흥민, 헬스, 7000), (김민수, 헬스, 7000), (김민수, 골프, 8000)`)
+=> 2NF : order(`(손흥민, 헬스), (김민수, 헬스), (김민수, 골프)`), lecture(`(헬스, 7000), (골프, 8000)`)
+
+#### Pros
+
+It's easy to update
+
+```sql
+-- normal format 1 (computer should change a lot of values)
+UPDATE order SET price=12000 WHERE lecture="헬스";
+
+-- normal format 2 (computer just need to change a single value)
+UPDATE lecture SET price=12000 WHERE name="헬스";
+```
+
+#### Cons
+
+It's hard to select
+
+```sql
+-- normal format 1
+SELECT price FROM order WHERE name="김민수";
+
+-- normal format 2-1 (JOIN)
+SELECT price FROM lecture,order WHERE lecture.name=order.lecture AND lecture.name="헬스";
+
+-- normal format 2-2 (NESTED QUERY)
+SELECT price FROM lecture WHERE lecture_name IN (
+    SELECT lecture FROM order WHERE name="김민수"
+);
+```
+
 ### 3
+
 ### 비손실
+
 ### BCNF
+
 ### etc.
+
 4, 5
 
 # Transaction
@@ -93,6 +170,7 @@ Attributes are must be atomic.
 블록으로 분리 -> 순차적 진행
 
 ## TCL
+
 Transaction Control Language
 
 ```sql
@@ -105,24 +183,35 @@ SAVE
 ## Properties
 
 ### Atomicity
+
 - execute all or nothing
 
 ### Consistency
+
 - ?
 
 ### Isolation
+
 - There is no interruption by other transaction
 
 # Concurrency Control
-- 
+
+-
 
 ## Lock
+
 ### Shared Lock
+
 ### EXCLUSIVE Lock
+
 ### 2 phase locking
+
 ### Dead Lock
 
 ## In another languages
+
 ### OS thread locking
+
 #### C Lock
+
 #### Python Global Lock
