Add examples for Friends & Inheritance in C++

--- a/cpp_src/notes/20240409.md
+++ b/cpp_src/notes/20240409.md
@@ -23,7 +23,7 @@ These variables and functions just act like common static things and can't acces
 ```cpp
 class Circle {
 public:
-    int priv;
+    int member;
     static int x;
     static int ex(){
         ...
@@ -32,6 +32,6 @@ public:
 
 int main(){
     int y = Circle::x;
-    y = Circle::priv;   // this will be error
+    y = Circle::member;   // this will be an error
 }
 ```
