Add socket & envs

--- a/mc/notes/20240417.md
+++ b/mc/notes/20240417.md
@@ -51,6 +51,9 @@ Finding Nyquist frequency :
 
 `fNyquist = 2fMax`
 
+- fNyquist : Nyquist Frequency
+- fMax : Maximum Frequency that appears in the signal
+
 ### Hold
 
 The sampled data is holded for digitization
