Add Filtering & Edge detecting in OpenCV

--- a/opencv/notes/20240507.md
+++ b/opencv/notes/20240507.md
@@ -89,3 +89,7 @@ analyze the brightness of the image cell by cell
 A method to avoid overflow
 
 If the value is too big, saturate code will convert the value to max value
+
+# Vector
+
+dynamic size and dynamic type array
