Syntax of Python

--- a/python/notes/20240521.md
+++ b/python/notes/20240521.md
@@ -1,7 +1,69 @@
+# Python
+
+C/C++
+
+## Package & Library
+
+Don't make a wheel
+
+import - load module
+
+Package - a collection of modules
+
+/usr/dist - python
+/usr/site - pip
+
+# Virtual Environment
+
+## virtualenv + pip(global)
+
+## conda
+
+conda3/ -> projects
+
+# Variable
+
+All variables are a instance(object) of a class
+
+All variables store into the heap -> Use Garbage Collector
+
+# GIL
+
+The global interpreter can only be one - Python threads are inefficient than others
+
+# Input / Output
+
+print()
+f-string
+format()
+sep, end, flush
+
+## stdin
+input()
+
+
 # Multiple type
-- List
+## List
 It's consist of many pointers
+
+#### indexing & slicing
+
+reverse indexing
+list methods
+
+copy of list
+
+# Packing & Unpacking
+
+Like pattern matching in functional programming
 
 # Single type
 - Array
 - Vector
+
+# Condition
+
+There are no parenthesis
+
+True: There is data
+False: There is no data
