--- a/python/notes/20240523.md
+++ b/python/notes/20240523.md
@@ -1,17 +1,47 @@
-# Tuple
+# Data Structure
+
+## List
+
+Unordered, allow duplication
+
+```python
+[1, 2, 3]
+```
+
+## Tuple
 It's Like a list, but it's immutable
 
-# Set
+## Set
+
 Not ordered, Not duplicated
+
 ```python
 s = set([1, 2])
+s.add(3)
+s.remove(1)
+
+# union: |, intersection: &, difference: -
 ```
 
-# Dictionary
+## Dictionary
+
 Not ordered, Not duplicated
+
 ```python
-dic = [1: 1, 2: 2]
+dct = {1: 1, 2: 2}
+dct[3] = 3
 ```
+
+## Stack
+
+First In Last Out
+
+- push, pop
+
+## Queue
+
+First In First Out
+
 
 # Collection Module
 
@@ -23,7 +53,38 @@ Stack + Queue => Circle Linked List
 ## Counter
 ## namedtuple
 
-# Python style code
+# Python style code (Pythentic)
 
-## Split
+## Split & Join (str)
+
+You can split or join a string!
+
 ## List Comprehension
+
+```python
+# create odd list by using list comprehension
+[i for in range(10) if i % 2]
+```
+
+# OOP
+
+Object Oriented Programming
+
+Class -> Object
+
+- the class yield object as much as you want
+
+## Inheritance
+
+```python
+class A(object):
+    pass
+```
+
+## `self` Pointer
+
+`this` Pointer in another languages
+
+# polymorphysm
+
+# 가시성
