--- a/python/notes/20240521.md
+++ b/python/notes/20240521.md
@@ -1,6 +1,12 @@
 # Python
 
-C/C++
+Python is a dynamic typed language
+
+## Dynamic typing
+
+The type of a variable can be changed at runtime
+
+It's more flexible than C/C++ (static typed language) but slower
 
 ## Package & Library
 
@@ -10,16 +16,38 @@ import - load module
 
 Package - a collection of modules
 
+#### Package Location
+
+```python
+import site
+print(site.getsitepackages())
+print(site.getusersitepackages())
+
+import packge_name
+print(package_name.__path__)
+```
+
 /usr/dist - python
-/usr/site - pip
+`/usr/site-packages` - pip
+
+#### Commands
+
+- list all packages : `pip freeze`
+- install packages by requirements.txt : `pip install -r requirements.txt`
 
 # Virtual Environment
+
+To manage projects independently -> Python has a lot of libraries
 
 ## virtualenv + pip(global)
 
 ## conda
 
 conda3/ -> projects
+
+## pyenv + pyenv-virtualenv
+
+[Go to the Documentation](https://github.com/pyenv/pyenv)
 
 # Variable
 
@@ -39,12 +67,18 @@ format()
 sep, end, flush
 
 ## stdin
+
 input()
 
-
 # Multiple type
+
 ## List
+
 It's consist of many pointers
+
+```python
+a = [1, 2, 3]
+```
 
 #### indexing & slicing
 
@@ -57,7 +91,13 @@ copy of list
 
 Like pattern matching in functional programming
 
+```python
+a, b, c = (1, 2, 3)
+print(a, b, c) #=> 1 2 3
+```
+
 # Single type
+
 - Array
 - Vector
 
@@ -67,3 +107,17 @@ There are no parenthesis
 
 True: There is data
 False: There is no data
+
+# Memory Management in Python
+
+## Garbage Collector
+
+Python has the reference counting garbage collector
+
+#### Reference counting
+
+- counting reference and if it is 0, it will be deleted automatically
+
+#### Cycle Detection
+
+- looking for and cleans up cycles of unreachable objects periodically
