--- a/python/notes/20240522.md
+++ b/python/notes/20240522.md
@@ -1,4 +1,19 @@
+# Threads in Python
+
+## :lock: Global Interpreter Lock (GIL)
+
+Python allows only one thread to execute Python **bytecode at a time per process**  
+which simplifies memory management but limits parallelism in CPU-bound tasks.
+
+#### Solution
+
+Use **Multiprocessing** by `import multiprocessing`
+
+It uses its own memory space and has its own Python interpreter and GIL  
+allowing true parallel execution.
+
 # elif
+
 # loop
 
 do not use parenthesis: ()
@@ -8,7 +23,9 @@ container -> range
 while
 
 # enumerate
+
 # function
+
 a context of code that process a specific task
 
 ## Function Call
@@ -46,6 +63,11 @@ def args_test(one, two, *args)
 def kwargs_test(one, two, *args, **kwargs)
 ```
 
+# Why use `"__main__"`?
+
+To ensure the code is only executed when the script is run directly,  
+and not when it is imported into another script.
+
 # Scoping rule
 
 variable definition with the same name in function allocate new variable
@@ -58,20 +80,75 @@ A way to call by itself
 
 Inline function, Anonymous function
 
+```python
+lambda x, y: x + y
+```
+
 # Generator
 
-A code that make iterator
+A code that make iterator  
+( without having to store the entire sequence in memory at once )
+
+```python
+def simple_generator():
+  yield 1
+  yield 2
+  yield 3
+
+gen = simple_generator() #=> <generator object simple_generator at 0x000002>
+print(next(gen)) #=> 1
+print(next(gen)) #=> 2
+print(next(gen)) #=> 3
+```
+
+## Advantages of Generator
+
+- it's memory efficient & performant ( due to lazy evaluation )  
+  it's particularly useful for big data processing
+
+## Generator Expression
+
+It's similar to list comprehension but use parenthesis instead of square brackes.
+
+```python
+gen = (x for x in range(3))
+
+for value in gen:
+  print(value)
+```
 
 # Decorator
 
-Wraping
+A function that modifies the behavior fo another function or method by wrapping it.
+
+They are executed at the time the function they decorate is defined, not when the function is called.
+
+```python
+def simple_decorator(func):
+  def wrapper():
+    print("Before")
+    func()
+    print("After")
+  return wrapper
+
+@simple_decorator
+def print_something():
+  print("Hello")
+
+print_something()
+#=> Before
+#=> Hello
+#=> After
+```
 
 # String
 
 ## methods
+
 there are a lot of method in string class.
 
 ## f-string
 
 ## coding test
+
 -- github
