--- a/python/notes/20240523.md
+++ b/python/notes/20240523.md
@@ -9,7 +9,8 @@ Unordered, allow duplication
 ```
 
 ## Tuple
-It's Like a list, but it's immutable
+
+It's Like a list, but it's immutable (you can't change it after created)
 
 ## Set
 
@@ -34,30 +35,42 @@ dct[3] = 3
 
 ## Stack
 
-First In Last Out
+First In Last Out (FILO)
 
 - push, pop
 
 ## Queue
 
-First In First Out
-
+First In First Out (FIFO)
 
 # Collection Module
 
 ## deque
+
 Stack + Queue => Circle Linked List
 
+#### methods
+
+- append
+- appendleft
+- pop
+- popleft
+
 ## OrderedDict
+
 ## defaultdict
+
+You can initialize with default value
+
 ## Counter
+
 ## namedtuple
 
 # Python style code (Pythentic)
 
 ## Split & Join (str)
 
-You can split or join a string!
+You can split or join a string! - this is very common in Python
 
 ## List Comprehension
 
@@ -74,17 +87,62 @@ Class -> Object
 
 - the class yield object as much as you want
 
+```python
+class Person:
+    # initialize
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+```
+
 ## Inheritance
 
 ```python
-class A(object):
-    pass
+class Child(Parent):
+    super() # call the parent class
 ```
 
 ## `self` Pointer
 
 `this` Pointer in another languages
 
-# polymorphysm
+# Polymorphysm
 
-# 가시성
+```python
+class Parent:
+    def method(self):
+        pass
+
+class Child(Parent):
+    def method(self): # method overriding
+        pass
+```
+
+# Visibility
+
+You can hide something by using `__`
+
+```python
+class Person:
+    def __init__(self, name, age):
+        self.name = name # public
+        self.__age = age # private
+```
+
+## @property
+
+```python
+class Person:
+    @property # you can access private
+    def age(self):
+        return self.__age
+```
+
+# Class variable
+
+You can assign a class variable ( it's same as static variable )
+
+```python
+class Person:
+    name = "John" # class variable
+```
