--- a/python/notes/20240524.md
+++ b/python/notes/20240524.md
@@ -7,3 +7,22 @@ You should define `__init__.py` file to create package (metadata file)
 # Module
 
 A single python file
+
+# Error Handling
+
+You can use `try`, `except`, `finally`, `raise`, `else` and `assert`
+
+- tryExcept.py
+
+```python
+try:
+  ...
+except:
+  ...
+finally:
+  ...
+```
+
+# File I/O
+
+You can use `open`, `read`, `write`, `close`
