--- a/pythonData/notes/20240527.md
+++ b/pythonData/notes/20240527.md
@@ -7,10 +7,10 @@
 - raw
 - numeric - 수치
 - categorical (polychotomous) - 범주
-- continuous - 연속
+- continuous - 연속 - 일정 범위
 - discrete - 이산
-- binary (indicator) - 이진
-- ordinal - 순서 - 성적, 등급
+- binary (indicator) - 이진 - 서로 상반된 데이터 (male-female)
+- ordinal - 순서 - (성적, 등급)
 
 # Table Data
 
@@ -44,11 +44,13 @@ typical value
 # Variability(변이) Analysis
 
 - deviation - 편차(오차) - (estimate - metric)
-- variance - 분산
+- variance - 분산(分散)
 - dispersion - 산포도
 - standard deviation - 표준평균
-- mean absolute deviation - 평균절대편차
-- median absolute deviation from the median - 중간값의 중위절대편차
+- mean absolute deviation - 평균절대편차  
+  `sum of all (estimate - metric) |> abs |> mean`
+- median absolute deviation from the median (MAD) - 중간값의 중위절대편차  
+  `median |> abs |> (estimate - metric) |> mean`
 - range - 범위(min - max)
 - order statistics - 순서통계량(ordered min - max)
 - interquartile range(IQR) - (difference between 25th and 75th percentile)
@@ -73,11 +75,11 @@ typical value
 
 #### Correlation
 
-- correlation coefficient - 상관계수 - 관계
-- correlation matrix - 상관행렬
-- scatterplot - 산점도
+- correlation coefficient - 상관계수 - 변수간의 관계
+- correlation matrix - 상관행렬 - 변수간의 관계를 행렬로 표현
+- scatterplot - 산점도 - x, y
 
-## Glossary
+# Glossary
 
 - population - 모집단
 - sample - 표본집단
