Add Bigdata + Statstics + Machine Learning

--- a/python/notes/20240524.md
+++ b/python/notes/20240524.md
@@ -26,3 +26,19 @@ finally:
 # File I/O
 
 You can use `open`, `read`, `write`, `close`
+
+# CSV & Log management
+
+# Web scrapping
+
+## HTML
+
+## Regular Expression
+
+# XML & JSON
+
+## XML parsing
+
+## JSON
+
+storing environment variables
