--- a/pythonData/notes/20240527.md
+++ b/pythonData/notes/20240527.md
@@ -1,5 +1,10 @@
 # Exploratory Data Analysis
 
+통계를 왜 배우는가?
+-> 빅데이터를 배우기 위해
+-> 표본에 대한 평균
+-> 모집단 확실하게 하기
+
 ## inference
 
 # Data
@@ -78,6 +83,27 @@ typical value
 - correlation coefficient - 상관계수 - 변수간의 관계
 - correlation matrix - 상관행렬 - 변수간의 관계를 행렬로 표현
 - scatterplot - 산점도 - x, y
+
+# Preview to Pandas & Numpy
+
+## Numpy
+
+To overcome C-type array in python
+
+자주사용하는 배열을 쉽게 사용할 수 있는 함수 제공
+
+- zeros: filled with 0
+- ones: filed with 1
+- empty: just assign
+
+- eye: 2-Dimensional array with ones on the diagonal and zeros elsewhere.  
+  (사각형 형태의 2차원 배열)
+
+- diag: Extracting a diagonal or constructing a diagonal array.  
+  2-D array -> returns the k-th diagonal
+  1-D array -> constructs a 2-D array with the array as its diagonal and zeros elsewhere.
+
+- reshape: change the shape of an array without changing its data.
 
 # Glossary
 
