--- a/pythonData/notes/20240528.md
+++ b/pythonData/notes/20240528.md
@@ -1,5 +1,10 @@
 # Numpy
 
+과학계산을 위한 라이브러리.
+
+- 고성능, 다차원 배열 객체
+- 수학, 통계, 선형 대수, 푸리에 변환등을 통한 배열연산!
+
 ## Why should you use Numpy?
 
 #### Performance
@@ -47,11 +52,11 @@
 #### Data Structure
 
 - **[DataFrames](#DataFrame)**  
-  Pandas provides the DataFrame data structure, which is a table-like structure with labeled axes (rows and columns).  
+  Pandas provides the DataFrame data structure, which is a _table-like structure_ with labeled axes (rows and columns).  
   This is ideal for representing and manipulating structured data.
 
 - **[Series](#Series)**  
-  Pandas also offers the Series data structure, which is a one-dimensional labeled array capable of holding any data type.
+  Pandas also offers the Series data structure, which is a _one-dimensional labeled array_ capable of holding any data type.
 
 #### Ease of Data Manipulation
 
@@ -114,6 +119,12 @@ Extract: `df['column']`
 
 ## Filtering
 
+- query: 쿼리 문자열 사용
+- loc: 라벨 사용
+- iloc: index 사용
+- drop: 행 or 열 삭제
+- isin: 특정 값이 포함된 행 삭제
+
 ## Merging
 
 ## Grouping
@@ -124,6 +135,77 @@ Extract: `df['column']`
 
 ## Join & Concat
 
+#### Join
+
+SQL과 유사한 Dataframe 결합 연산
+
+- Inner: 공통키 기준
+- Left: 왼쪽 프레임 유지, 오른쪽 공동키 기준
+- Right: 오른쪽 프레임 유지, 왼쪽 공동키 기준
+- Outer: 모든 데이터 결합, 공통키 없을시 NaN
+
+```python
+import pandas as pd
+
+# 데이터 프레임 생성
+df1 = pd.DataFrame({
+    'key': ['A', 'B', 'C'],
+    'value1': [1, 2, 3]
+})
+
+df2 = pd.DataFrame({
+    'key': ['B', 'C', 'D'],
+    'value2': [4, 5, 6]
+})
+
+# 이너 조인
+inner_join = pd.merge(df1, df2, on='key', how='inner')
+print('Inner Join:\n', inner_join)
+
+# 레프트 조인
+left_join = pd.merge(df1, df2, on='key', how='left')
+print('Left Join:\n', left_join)
+
+# 라이트 조인
+right_join = pd.merge(df1, df2, on='key', how='right')
+print('Right Join:\n', right_join)
+
+# 아우터 조인
+outer_join = pd.merge(df1, df2, on='key', how='outer')
+print('Outer Join:\n', outer_join)
+```
+
+#### Concatenaate
+
+데이터프레임들을 행 or 열 방향으로 연결
+
+```python
+pd.concat() # 여러개, 행 or 열
+df.append() # 2개, 행
+```
+
 ## Selection
 
 ## Indexing
+
+# Aggregation Functions (집계함수)
+
+데이터의 여러값 -> 하나의 요약된 값
+
+- sum
+- mean
+- median
+- min
+- max
+- count
+- std: 표준편차
+- var: 분산
+
+# Transformation Functions (변환함수)
+
+데이터의 각 요소 변환(전처리, 정규화등)
+
+- apply: 특정 함수 적용 (to 행 or 열)
+- map: 특정 함수 적용 (to 시리즈의 각 요소)
+- replace: 특정 값 -> 다른 값
+- astype: 타입 변환
